--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -79,3 +79,36 @@
   pages={959-970},
   year={2018}
 }
+
+@article{fisher1981lagrangian,
+  title={The Lagrangian relaxation method for solving integer programming problems},
+  author={Fisher, Marshall L},
+  journal={Management science},
+  volume={27},
+  number={1},
+  pages={1--18},
+  year={1981},
+  publisher={INFORMS}
+}
+
+@article{barnhart1998branch,
+  title={Branch-and-price: Column generation for solving huge integer programs},
+  author={Barnhart, Cynthia and Johnson, Ellis L and Nemhauser, George L and Savelsbergh, Martin WP and Vance, Pamela H},
+  journal={Operations research},
+  volume={46},
+  number={3},
+  pages={316--329},
+  year={1998},
+  publisher={INFORMS}
+}
+
+@article{dorndorf1995evolution,
+  title={Evolution based learning in a job shop scheduling environment},
+  author={Dorndorf, Ulrich and Pesch, Erwin},
+  journal={Computers \& Operations Research},
+  volume={22},
+  number={1},
+  pages={25--40},
+  year={1995},
+  publisher={Elsevier}
+}
