--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -112,3 +112,20 @@
   year={1995},
   publisher={Elsevier}
 }
+
+@article{ruk2017,
+   title = {Offshore Wind Project Timelines},
+   author={Renewable UK},
+   journal = {https://www.renewableuk.com/news/294516/Offshore-Wind-Project-Timelines.htm},
+   year = {2017},
+   note = {Accessed: 2019-03-24}
+}
+
+@article{kaiser2010offshore,
+  title={Offshore wind energy installation and decommissioning cost estimation in the us outer continental shelf},
+  author={Kaiser, Mark J and Snyder, Brian},
+  journal={US Dept. of the Interior, Bureau of Ocean Energy Management, Regulation and Enforcement, Herndon, VA TA\&R},
+  volume={648},
+  year={2010},
+  publisher={Citeseer}
+}
