--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -129,3 +129,43 @@
   year={2010},
   publisher={Citeseer}
 }
+
+@article{dinwoodie2014operational,
+  title={Operational strategies for offshore wind turbines to mitigate failure rate uncertainty on operational costs and revenue},
+  author={Dinwoodie, Iain Allan and McMillan, David},
+  journal={IET Renewable Power Generation},
+  volume={8},
+  number={4},
+  pages={359--366},
+  year={2014},
+  publisher={IET}
+}
+
+@inproceedings{dinwoodie2012analysis,
+  title={Analysis of offshore wind turbine operation and maintenance using a novel time domain meteo-ocean modeling approach},
+  author={Dinwoodie, Iain and Quail, F and McMillan, D},
+  booktitle={ASME Turbo Expo 2012: Turbine Technical Conference and Exposition},
+  pages={847--857},
+  year={2012},
+  organization={American Society of Mechanical Engineers}
+}
+
+@article{merigaud2016condition,
+  title={Condition-based maintenance methods for marine renewable energy},
+  author={M{\'e}rigaud, Alexis and Ringwood, John V},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={66},
+  pages={53--78},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{perez2013offshore,
+  title={Offshore wind farm layout optimization using mathematical programming techniques},
+  author={P{\'e}rez, Beatriz and M{\'\i}nguez, Roberto and Guanche, Ra{\'u}l},
+  journal={Renewable Energy},
+  volume={53},
+  pages={389--399},
+  year={2013},
+  publisher={Elsevier}
+}
